changed field sizes fix reactiveness add images preloading

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <link href=/images/mongoose.svg rel=preload as=image type="image/svg+xml">
+    <link href=/images/fruit_0.svg rel=preload as=image type="image/svg+xml">
+    <link href=/images/fruit_1.svg rel=preload as=image type="image/svg+xml">
+    <link href=/images/fruit_2.svg rel=preload as=image type="image/svg+xml">
+    <link href=/images/fruit_3.svg rel=preload as=image type="image/svg+xml">
+    <link href=/images/fruit_4.svg rel=preload as=image type="image/svg+xml">
+    <link href=/images/fruit_5.svg rel=preload as=image type="image/svg+xml">
+    <link href=/images/fruit_6.svg rel=preload as=image type="image/svg+xml">
   </head>
   <body>
     <div id="app"></div>
